Fix  2nd round risk and difficulty scores update